Fix spacing of spans

--- a/src/client/styles/components/SubjectHeadings.scss
+++ b/src/client/styles/components/SubjectHeadings.scss
@@ -9,7 +9,7 @@
   border: 1px solid white;
 }
 
-.subjectHeadingRow > li {
+.subjectHeadingRow > span {
   display: inline-block;
 }
 
